--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,11 @@ java {
     }
 }
 
+tasks.withType(ScalaCompile).configureEach {
+    sourceCompatibility = "17"
+    targetCompatibility = "17"
+}
+
 def ROBOT_MAIN_CLASS = "frc.robot.scala.Main"
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
