--- a/build.gradle
+++ b/build.gradle
@@ -2,22 +2,22 @@ import edu.wpi.first.gradlerio.GradleRIOPlugin
 
 plugins {
     id "java"
-    id "scala"
+//    id "scala"
     id "edu.wpi.first.GradleRIO" version "2024.1.1"
 }
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
 
-tasks.withType(ScalaCompile).configureEach {
-    sourceCompatibility = "17"
-    targetCompatibility = "17"
-}
+//tasks.withType(ScalaCompile).configureEach {
+//    sourceCompatibility = "17"
+//    targetCompatibility = "17"
+//}
 
-def ROBOT_MAIN_CLASS = "frc.robot.scala.Main"
+def ROBOT_MAIN_CLASS = "frc.robot.Main"
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project DeployUtils.
